# sdk-nrf

doc/nrf/releases/: release-notes-changelog.rst
modules/mcuboot/: CMakeLists.txt
subsys/net/lib/download_client/src/: coap.c  download_client.c
subsys/net/lib/lwm2m_client_utils/lwm2m/: lwm2m_firmware.c
tests/subsys/net/lib/download_client/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/net/lib/download_client/src/: main.c  stubs.c  stubs.h
tests/subsys/net/lib/download_client/src/mock/: dl_coap.c  dl_coap.h  dl_http.c  dl_http.h  socket.c  socket.h
tests/subsys/net/lib/lwm2m_client_utils/lwm2m/lwm2m_firmware/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/net/lib/lwm2m_client_utils/lwm2m/lwm2m_firmware/mocks/src/dfu/: dfu_target.c  mcuboot.c
tests/subsys/net/lib/lwm2m_client_utils/lwm2m/lwm2m_firmware/mocks/src/net/: fota_download.c  lwm2m_client_utils_fota.c
tests/subsys/net/lib/lwm2m_client_utils/lwm2m/lwm2m_firmware/mocks/src/zephyr/net/: lwm2m_engine.c  lwm2m_obj_firmware.c  lwm2m_registry.c
tests/subsys/net/lib/lwm2m_client_utils/lwm2m/lwm2m_firmware/mocks/src/zephyr/sys/: reboot.c
tests/subsys/net/lib/lwm2m_client_utils/lwm2m/lwm2m_firmware/src/: main.c
